--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,41 @@
+asttokens==2.0.4
+blis==0.7.4
+catalogue==2.0.1
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+cymem==2.0.5
+decorator==4.4.2
+en-core-web-sm==3.0.0
+executing==0.5.4
 Flask==1.1.2
+graphviz==0.16
+icecream==2.1.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
-joblib==1.0.0
 MarkupSafe==1.1.1
+murmurhash==1.0.5
+networkx==2.5
 numpy==1.20.1
-scikit-learn==0.24.1
-scipy==1.6.0
-sklearn==0.0
-threadpoolctl==2.1.0
+packaging==20.9
+pathy==0.4.0
+preshed==3.0.5
+pydantic==1.7.3
+Pygments==2.8.1
+pyparsing==2.4.7
+pytextrank==3.1.0
+requests==2.25.1
+six==1.15.0
+smart-open==3.0.0
+spacy==3.0.5
+spacy-legacy==3.0.1
+srsly==2.4.0
+thinc==8.0.2
+tqdm==4.59.0
+typer==0.3.2
+urllib3==1.26.4
+wasabi==0.8.2
 Werkzeug==1.0.1
-nltk==3.5
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
